Bug 978397 - Fix the implementation of CountPopulation_32 on Windows. r=nbp